script somewhat working, need to fix repeat

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div
         class="slide active"
         style="
-          background-image: url('https://images.unsplash.com/photo-1570641963303-92ce4845ed4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80');"
+          background-image: url('https://images.unsplash.com/photo-1570641963303-92ce4845ed4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80'); background-repeat: no-repeat"
     
       ></div>
       <div class="slide" style = "background-image: url('https://images.unsplash.com/photo-1571931264778-8ca45c9bb16d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80')"> 
