--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Background Slider</title>
     <link rel="stylesheet" href="style.css" />
-    <script src="https://kit.fontawesome.com/0e200d7ce6.js" crossorigin="anonymous"></script>
+    <script
+      src="https://kit.fontawesome.com/0e200d7ce6.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
 
   <body>
@@ -14,23 +17,34 @@
       <div
         class="slide active"
         style="
-          background-image: url('https://images.unsplash.com/photo-1570641963303-92ce4845ed4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80'); background-repeat: no-repeat"
-    
+          background-image: url('https://images.unsplash.com/photo-1570641963303-92ce4845ed4c?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80');
+          background-repeat: no-repeat;
+        "
       ></div>
-      <div class="slide" style = "background-image: url('https://images.unsplash.com/photo-1571931264778-8ca45c9bb16d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80')"> 
-    </div>
-      </div>
-      <div class="slide" style = "background-image: url('https://images.unsplash.com/reserve/Pu9MTKTuWOi7dDqIyZqA_urbex-ppc-062.jpg?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80')">
-    </div>
-      </div>
-      <div class="slide" style = "background-image: url('https://plus.unsplash.com/premium_photo-1669829639756-bf38f2b1c4a1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1222&q=80')"> 
-    </div>
+      <div
+        class="slide"
+        style="
+          background-image: url('https://images.unsplash.com/photo-1571931264778-8ca45c9bb16d?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=687&q=80');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('https://images.unsplash.com/reserve/Pu9MTKTuWOi7dDqIyZqA_urbex-ppc-062.jpg?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1171&q=80');
+        "
+      ></div>
+      <div
+        class="slide"
+        style="
+          background-image: url('https://plus.unsplash.com/premium_photo-1669829639756-bf38f2b1c4a1?ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D&auto=format&fit=crop&w=1222&q=80');
+        "
+      ></div>
 
-      <button class="arrow left-arrow" id ="left">
+      <button class="arrow left-arrow" id="left">
         <i class="fa-solid fa-arrow-left"></i>
       </button>
 
-      <button class="arrow right-arrow" id ="right">
+      <button class="arrow right-arrow" id="right">
         <i class="fa-solid fa-arrow-right"></i>
       </button>
     </div>
